--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,4 +4,7 @@
     <% @tasks.each do |task| %>
     <li><%= link_to task.id, task %> <%= task.content %></li>
     <% end %>
+    
   </ul>
+  
+  <%= link_to 'タスク新規作成', new_task_path %>
