--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,21 @@
-<h1>タスクの一覧ページ</h1>
+<% if logged_in? %>
 
-  <ul>
-    <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%=task.status %> > <%= task.content %></li>
-    <% end %>
-    
-  </ul>
+<% @tasks.each do |task| %>
+<li><%= task.content %></li>
+<% end %>
+
   
-  <%= link_to 'タスク新規作成', new_task_path %>
+  
+  
+  
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the Tasklist!</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
+
+
+
